--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -3,6 +3,8 @@
     "com.unity.ai.navigation": "1.1.4",
     "com.unity.collab-proxy": "2.0.4",
     "com.unity.feature.development": "1.0.1",
+    "com.unity.multiplayer.tools": "1.1.0",
+    "com.unity.netcode.gameobjects": "1.4.0",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.7.4",
     "com.unity.ugui": "1.0.0",
